fix navbar placement on mobile

--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -12,8 +12,9 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
+    justify-items: center;
     align-content: center;
-    background-color: aqua;
+    align-items: center;
 }
 
 .navbar p, .navbar a{
@@ -42,10 +43,9 @@
 .navbar-content{
     visibility: collapse;
     display: flex;
-    align-self: center;
     justify-content: space-around;
 
-    width: 0vw;    
+    width: 5vw;    
     background-color:rgba(255, 255, 255, 0.1);
     backdrop-filter: blur(10px);
     
